Feat: Validated uploading file type

--- a/.exemple.env
+++ b/.exemple.env
@@ -1,2 +1,4 @@
 API_URL=/api/v1
 DATABASE_CONNECTION_STRING='mongodb+srv://gauti:aKHf3FKrcPwb7BvX2024@cluster0.pwes2bh.mongodb.net/eshop-database?retryWrites=true&w=majority&appName=Cluster0'
+APP_SECRET='AujebKFHJCBJKQVSJLKVQS@LI'
+SECRET=my-test-is-going-fast
